--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,1 +1,10 @@
 bot_welcome=Salut! Je viens de rejoindre ce serveur :wave:\nUtilisez la commande `/parametres` pour me configurer (Vous devez posséder la permission `Manage channels` pour l'utiliser).
+channel_not_set=Non configuré
+no_permission_description=\ Vous n'avez pas la permission d'utiliser cette commande !
+no_permission_title=Non autorisé
+setup_embed_description=Réagissez avec l'emoji correspondant au paramètre sélectionné pour le modifier\n\n
+setup_embed_field_channel=Salon de jeu
+setup_embed_field_lang=Langue du serveur
+setup_embed_field_soon_description=Plus de paramètres, incluant les tableaux de score etc.
+setup_embed_field_soon_title=Prochainement
+setup_embed_title=Paramètres du bot
