--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,1 +1,9 @@
 bot_welcome=Hello ! I've just been added to your server :wave:\nUse the `/settings` command to setup me (You will need the `Manage channels` permission to use it !).
+channel_not_set=Not set
+no_permission_description=You are not allowed to use this command !
+no_permission_title=Unauthorized
+setup_embed_field_channel=Game channel
+setup_embed_field_lang=Server language
+setup_embed_field_soon_description=More parameters, such as leaderboards etc.
+setup_embed_field_soon_title=Coming soon
+setup_embed_title=Bot settings
