--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 bot_welcome=
 channel_not_set=
+emoji_tag=
 no_permission_description=
 no_permission_title=
 setup_embed_description=
@@ -7,4 +8,6 @@ setup_embed_field_channel=
 setup_embed_field_lang=
 setup_embed_field_soon_description=
 setup_embed_field_soon_title=
+setup_embed_lang_description=
+setup_embed_lang_title=
 setup_embed_title=
