--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,5 +1,6 @@
 bot_welcome=Salut! Je viens de rejoindre ce serveur :wave:\nUtilisez la commande `/parametres` pour me configurer (Vous devez posséder la permission `Manage channels` pour l'utiliser).
 channel_not_set=Non configuré
+emoji_tag=fr
 no_permission_description=\ Vous n'avez pas la permission d'utiliser cette commande !
 no_permission_title=Non autorisé
 setup_embed_description=Réagissez avec l'emoji correspondant au paramètre sélectionné pour le modifier\n\n
@@ -7,4 +8,6 @@ setup_embed_field_channel=Salon de jeu
 setup_embed_field_lang=Langue du serveur
 setup_embed_field_soon_description=Plus de paramètres, incluant les tableaux de score etc.
 setup_embed_field_soon_title=Prochainement
+setup_embed_lang_description=Sélectionnez la langue que vous souhaitez utiliser à l'aide de la réaction correspondante ci-dessous.\nLes langues disponibles sont :\n\n%s
+setup_embed_lang_title=Paramétrer la langue du serveur
 setup_embed_title=Paramètres du bot
